kubernetes/infra/home-service.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-service-deployment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-service
  template:
    metadata:
      labels:
        app: home-service
    spec:
      containers:
        - name: home-service
          image: docker.io/adhirajk/home-service:1.0.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: home-service-cluster-ip-service
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: home-service
  ports:
    - port: 3000
      targetPort: 3000
